--- a/simple.html
+++ b/simple.html
@@ -62,6 +62,8 @@
 
           yield(["step finished", i])
         }
+
+        world.rect(32, 96 * 2, 48, 48, { text: 'おわり', shapeStyle: noedge })
         yield(["finished"])
       }
 
