--- a/kmp.html
+++ b/kmp.html
@@ -111,6 +111,7 @@
       }
 
       function prepare() {
+        window.world.clear()
         window.current = doit(
           world,
           document.getElementById('haystack').value,
