--- a/simple.html
+++ b/simple.html
@@ -68,6 +68,7 @@
       }
 
       function prepare() {
+        window.world.clear()
         window.current = doit(
           world,
           document.getElementById('haystack').value,
